# idea_scraper

./: .env.dev  .gitignore  pyproject.toml  readme.md  requirements.txt
reddit_scraper/: __init__.py  cli.py  logging_setup.py
reddit_scraper/core/: models.py
reddit_scraper/infra/: reddit.py
reddit_scraper/services/: csv_export.py  progress.py  scraper.py  txt_export.py
scripts/: merge_contents.py  output_to_text.py
