# pyproject.toml
[project]
name            = "reddit-scraper"
version         = "0.1.0"
description     = "CLI tool that fetches Reddit submissions and all comments for a date range."
readme          = "README.md"
requires-python = ">=3.9"
license         = { text = "MIT" }
authors         = [{ name = "Your Name", email = "you@example.com" }]

dependencies = [
    "praw>=7.7.1",
    "asyncpraw>=7.7.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=1.10.0",
    "tqdm>=4.66.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = ["black", "ruff", "mypy"]

[project.scripts]
reddit-scraper = "reddit_scraper.cli:main"

[tool.black]
line-length = 100

[tool.ruff]
select = ["E", "F", "I"]
line-length = 100

[tool.mypy]
python_version = "3.9"
strict = true

[build-system]
requires      = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
